[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/mb_theme.tres" type="Theme" id=1]
[ext_resource path="res://cyborg/gadgets_popup/gadgets_popup.gd" type="Script" id=2]
[ext_resource path="res://cyborg/gadgets_popup/part_row.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/ui/outline4.png" type="Texture" id=4]

[node name="gadgets_popup" type="Popup"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 432.0
margin_bottom = 357.0
rect_min_size = Vector2( 250, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
popup_exclusive = false
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="MarginContainer2" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
_sections_unfolded = [ "custom_constants" ]

[node name="Panel" type="Panel" parent="MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 428.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 428.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
_sections_unfolded = [ "Rect" ]

[node name="cyborg_parts_list" type="VBoxContainer" parent="MarginContainer2/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 420.0
margin_bottom = 345.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 8
alignment = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 416.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/cyborg_parts_list/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_right = 292.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "MANAGE GADGETS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 416.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Control" type="Control" parent="MarginContainer2/MarginContainer/cyborg_parts_list/HBoxContainer7" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 202.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/cyborg_parts_list/HBoxContainer7" index="1"]

self_modulate = Color( 0.566406, 0.566406, 0.566406, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 206.0
margin_right = 290.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "current"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Control2" type="Control" parent="MarginContainer2/MarginContainer/cyborg_parts_list/HBoxContainer7" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_right = 304.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label2" type="Label" parent="MarginContainer2/MarginContainer/cyborg_parts_list/HBoxContainer7" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_right = 368.0
margin_bottom = 10.0
rect_min_size = Vector2( 60, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LIVE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Control3" type="Control" parent="MarginContainer2/MarginContainer/cyborg_parts_list/HBoxContainer7" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_right = 416.0
margin_bottom = 10.0
rect_min_size = Vector2( 44, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="eyes_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="2" instance=ExtResource( 3 )]

margin_top = 36.0
margin_bottom = 78.0
part_name = "EYES"

[node name="arms_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="3" instance=ExtResource( 3 )]

margin_top = 86.0
margin_bottom = 128.0
type = 2
part_name = "ARMS"

[node name="hands_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="4" instance=ExtResource( 3 )]

margin_top = 136.0
margin_bottom = 178.0
type = 3
part_name = "HANDS"

[node name="torso_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="5" instance=ExtResource( 3 )]

margin_top = 186.0
margin_bottom = 228.0
type = 1
part_name = "TORSO"

[node name="legs_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="6" instance=ExtResource( 3 )]

margin_top = 236.0
margin_bottom = 278.0
type = 4
part_name = "LEGS"

[node name="feet_row" parent="MarginContainer2/MarginContainer/cyborg_parts_list" index="7" instance=ExtResource( 3 )]

margin_top = 286.0
margin_bottom = 328.0
type = 5
part_name = "FEET"

[node name="NinePatchRect" type="NinePatchRect" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 6
patch_margin_top = 10
patch_margin_right = 6
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin", "Visibility" ]


